Them mo ta chi tiet cac buoc them file vao github va y nghia cua nhung cau lenh git do

--- a/1.html
+++ b/1.html
@@ -8,5 +8,15 @@
 <body>
     <h1>Xin chao</h1>
     <script src="main.js"></script>
+    <!-- 
+    _ Mô tả ý nghĩa của các câu lệnh git được sử dụng:
+        Bước 1: git init: Tạo git repo trong máy.
+        Bước 2: git status: Kiểm tra các files chưa commits.
+        Bước 3: git add .: Sau khi đã kiểm tra xong, sử dụng câu lệnh này để thêm ( hoặc đánh dấu những thay đổi) các files trong máy vào trạng thái chuẩn bị (staging area) để sẵn sàng commits.
+        Bước 4: git commit -m "Msg": Commits những thay đổi vào local repository cùng với lời nhắn, giúp cho những người khác có xem sự thay đổi.
+        Bước 5: git log: Câu lệnh dùng để kiểm tra xem những file đã được commits có trong local repository hay không.
+        Bước 6: git remote add origin <<Remote_URL>>: Kết nối các file trong local repo với remote repo.
+        Bước 7: git push -u origin master: đẩy files từ branch master trong máy lên repo của github.
+    -->
 </body>
 </html>
